# rust_rss_bot

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/rss/: feeder.rs  filter.rs  reader.rs  repositories.rs  telegram_bot.rs  writer.rs
