[package]
name = "feed_bot"
version = "0.1.0"
authors = ["Смагин Павел <p.smagin@napoleonit.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = { version = "1.9.0", features = ["from_url"] }
chrono = "0.4"
telegram-bot = "0.7.0"
tokio = { version = "0.2.*", features = ["full"]}
futures = "0.3"

[lib]
name = "feed_bot"
path = "src/lib.rs"

[[bin]]
name = "feed_bot"
path = "src/main.rs"